--- a/src/app/components/unos/unos.component.html
+++ b/src/app/components/unos/unos.component.html
@@ -66,7 +66,7 @@
     </span>
   </div>
   <div style="margin-top:20px; margin-bottom: 7px;">
-    <button type="button" pButton icon="pi pi-save" label="Sačuvaj" style="margin: auto;" (click)="save()"></button>
+    <p-button type="button" size="small" icon="pi pi-save" label="Sačuvaj" [styleClass]="'margin: auto;'" (click)="save()"></p-button>
 </div>
 </form>
 <p-toast></p-toast>
